Further work on making this a basic starter app

--- a/launcher.html
+++ b/launcher.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8">
 
-    <script src="force.js"></script>
+    <!-- <script src="force.js"></script> -->
+    <script src="../mobilecaddy-electron/lib/force.js"></script>
+    <script src="../mobilecaddy-electron/lib/launcher.js"></script>
     <link rel="stylesheet" href="app.css" />
 
     <title>MobileCaddy Desktop</title>
@@ -12,8 +14,4 @@
     <h1>MobileCaddy Desktop!</h1>
     <!-- All of the Node.js APIs are available in this renderer process. -->
   </body>
-
-  <script>
-    require('./launcher.js')
-  </script>
 </html>
