--- a/launcher.html
+++ b/launcher.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
 
     <!-- <script src="force.js"></script> -->
-    <script src="../mobilecaddy-electron/lib/force.js"></script>
-    <script src="../mobilecaddy-electron/lib/launcher.js"></script>
+    <script src="node_modules/mobilecaddy-electron/lib/force.js"></script>
+    <script src="node_modules/mobilecaddy-electron/lib/launcher.js"></script>
     <link rel="stylesheet" href="app.css" />
 
     <title>MobileCaddy Desktop</title>
